Fix bug where network graph not showing

--- a/src/main/frontend/src/components/Dashboard.css
+++ b/src/main/frontend/src/components/Dashboard.css
@@ -47,16 +47,19 @@
 .Navigation-button {
     margin: 15px;
     border: 1px solid black;
+
 }
 
 .Graphs {
     margin: 10px;
     padding: 20px;
+
 }
 
 .Network-graph {
     margin-top: 10px;
     text-align: center;
+    height: 650px;
 }
 
 .Word-cloud {
